# timur-xai

./: .gitignore  README.md  pyproject.toml  test_motor.py  timur_benchmark.py
outputs/20260615_124057_qsMktV/: checkpoint.pkl  hall_of_fame.csv
outputs/20260615_152622_F3ZDV1/: checkpoint.pkl  hall_of_fame.csv
outputs/20260615_153113_YrTZZm/: checkpoint.pkl  hall_of_fame.csv
outputs/20260615_160558_0k6uCD/: checkpoint.pkl  hall_of_fame.csv.bak
outputs/20260615_160944_n12zTv/: checkpoint.pkl  hall_of_fame.csv
outputs/20260615_161407_Mzksfp/: checkpoint.pkl  hall_of_fame.csv
timur/: __init__.py
timur/Lisans ve Readme/: Readme.txt
timur/pinn/: loss.py
timur/symbolic/: dimensions.py  router.py
timur_benchmark_results/: DS1_sonuc.json  DS1_sonuc.txt  DS2_sonuc.json  DS2_sonuc.txt  DS3_sonuc.json  DS3_sonuc.txt  DS4_sonuc.json  DS4_sonuc.txt  DS5_sonuc.json  DS5_sonuc.txt  OZET_TABLO.json  OZET_TABLO.txt
