[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "timur-xai"
version = "1.0.0"
authors = [
  { name="Neşet Koçkar" }
]
description = "Dimensionless Physics-Informed Symbolic Regression & Neural Network Engine"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "scipy",
    "sympy",
    "scikit-learn",
    "torch",
    "pysr"
]

[project.urls]
"Homepage" = "https://github.com/Ne212/timur-xai"